[gd_scene load_steps=23 format=3 uid="uid://bokipxiabfh62"]

[ext_resource type="Script" path="res://node_3d.gd" id="1_2a1gg"]
[ext_resource type="AudioStream" uid="uid://dv5vjhp4co7r1" path="res://Echoes of a Whispers.mp3" id="2_4j335"]
[ext_resource type="Texture2D" uid="uid://7y2oha4n38kf" path="res://kloofendal_48d_partly_cloudy_puresky_4k.exr" id="3_tdkup"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_atx2k"]
albedo_color = Color(0.440902, 0.580557, 0.893354, 1)
metallic = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_dnh3g"]
material = SubResource("StandardMaterial3D_atx2k")
size = Vector3(20, 0.5, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_k33f4"]
size = Vector3(10, 0.5, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_urtwf"]
albedo_color = Color(0.263642, 0.307787, 0.79613, 1)

[sub_resource type="BoxMesh" id="BoxMesh_shiqb"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_urtwf")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mmi4b"]
albedo_color = Color(0.380053, 0.813204, 0.323439, 1)

[sub_resource type="BoxMesh" id="BoxMesh_luvi2"]
material = SubResource("StandardMaterial3D_mmi4b")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ec3xh"]
albedo_color = Color(0.964046, 0.574815, 0.552097, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jt5s6"]
material = SubResource("StandardMaterial3D_ec3xh")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lrwqw"]
albedo_color = Color(0.402618, 1, 0.808479, 1)

[sub_resource type="BoxMesh" id="BoxMesh_b6ljr"]
material = SubResource("StandardMaterial3D_lrwqw")

[sub_resource type="BoxMesh" id="BoxMesh_801w8"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_urtwf")

[sub_resource type="BoxMesh" id="BoxMesh_6rxsa"]
material = SubResource("StandardMaterial3D_mmi4b")

[sub_resource type="BoxMesh" id="BoxMesh_h7ilf"]
material = SubResource("StandardMaterial3D_ec3xh")

[sub_resource type="BoxMesh" id="BoxMesh_tf0nt"]
material = SubResource("StandardMaterial3D_lrwqw")

[sub_resource type="Shader" id="Shader_araih"]
code = "
// NOTE: Shader automatically converted from Godot Engine 4.3.stable's PanoramaSkyMaterial.

shader_type sky;

uniform sampler2D source_panorama : filter_linear, source_color, hint_default_black;
uniform float exposure : hint_range(0, 128) = 1.0;
uniform float speed = 0.002;

void sky() {
	vec2 skyCoords = vec2(SKY_COORDS.x + TIME * speed, SKY_COORDS.y);
	COLOR = texture(source_panorama, skyCoords).rgb * exposure;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_stp8p"]
shader = SubResource("Shader_araih")
shader_parameter/exposure = 1.0
shader_parameter/speed = 0.002
shader_parameter/source_panorama = ExtResource("3_tdkup")

[sub_resource type="Sky" id="Sky_j7don"]
sky_material = SubResource("ShaderMaterial_stp8p")

[sub_resource type="Environment" id="Environment_qiblg"]
background_mode = 2
sky = SubResource("Sky_j7don")

[node name="Level1" type="Node3D"]
script = ExtResource("1_2a1gg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.998344, -0.0575292, 0, 0.0575292, 0.998344, 6.02259, 3.58531, 8.34327)

[node name="Floor" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0)
mesh = SubResource("BoxMesh_dnh3g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_k33f4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0056199, 0.999984, 0, -0.999984, -0.0056199, 10.1662, 8.04586, 2.05537)
shadow_enabled = true

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.39016, 2.61798, 5.73307)

[node name="led1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("BoxMesh_shiqb")

[node name="led2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.58346, 2, 0)
mesh = SubResource("BoxMesh_luvi2")
skeleton = NodePath("../led1")

[node name="led3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.167, 2, 0)
mesh = SubResource("BoxMesh_jt5s6")
skeleton = NodePath("../led1")

[node name="led4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, 0)
mesh = SubResource("BoxMesh_b6ljr")

[node name="led5" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 2, 0)
mesh = SubResource("BoxMesh_801w8")

[node name="led6" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.09409, 2, 0)
mesh = SubResource("BoxMesh_6rxsa")
skeleton = NodePath("../led1")

[node name="led7" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.167, 2, 0)
mesh = SubResource("BoxMesh_h7ilf")
skeleton = NodePath("../led1")

[node name="led8" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.2823, 2, 0)
mesh = SubResource("BoxMesh_tf0nt")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4j335")
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qiblg")
